hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__access_namespace_then_non_namespace.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected 'S' to be a namespace",
                span: 1:32; [31, 32],
                level: Error,
            },
        ],
        inputs: (),
    },
)
