hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__access_namespace_then_non_namespace_then_non_namespace.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Namespace 'x' not found",
                span: 1:34; [33, 34],
                level: Error,
            },
        ],
        inputs: (),
    },
)
