hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__access_non_namespace_then_non_namespace.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected 'S' to be a namespace",
                span: 1:14; [13, 14],
                level: Error,
            },
        ],
        inputs: (),
    },
)
