hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__access_struct_field_read_invalid_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Condition expected to be of type boolean, got number",
                span: 1:55; [54, 61],
                level: Error,
            },
        ],
        inputs: (),
    },
)
