hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__access_struct_field_write_wrong_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "RHS expected to be of type number, got boolean",
                span: 1:62; [61, 66],
                level: Error,
            },
        ],
        inputs: (),
    },
)
