hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__access_struct_unknown_field.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "No field 'x' found in struct S",
                span: 1:29; [28, 29],
                level: Error,
            },
        ],
        inputs: (),
    },
)
